hphp/test/zend/bad/ext/standard/tests/strings/htmlentities08.php
<?php
	mb_internal_encoding('EUC-JP');
	print mb_internal_encoding()."\n";
	var_dump(htmlentities("\xa1\xa2\xa1\xa3\xa1\xa4", ENT_QUOTES, ''));
?>